--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -3,6 +3,6 @@
   <div class="unit">
     <label for="hobbies">What do you like?</label>
     <textarea  rows= "5" type="text" placeholder="e.g. Reading Spaceopera Novels" class="form-control" id="hobbies"
-      formControlName="hobbies"></textarea>
+      formControlName="hobbies" (keyup)="capitalize()"></textarea>
   </div>
 </form>
