--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -9,12 +9,14 @@
                     <div class="unit ">
                         <label for="courseTitle">Title</label>
                         <input type="text" class="form-control" id="courseTitle" placeholder="e.g. The Essence of Computer Science – C++ for People in a Hurry"
-                            formControlName="title">
+                            formControlName="title"
+                            (keyup)="capitalize('title', i)">
                     </div>
                     <div class="unit">
                         <label for="courseInstitution">Institution</label>
                         <input type="text" class="form-control" id="courseInstitution" placeholder="e.g. Awaqi"
-                            formControlName="institution">
+                            formControlName="institution"
+                            (keyup)="capitalize('institution', i)">
                     </div>
                 </div>
 
