--- a/src/app/languages/languages.component.html
+++ b/src/app/languages/languages.component.html
@@ -7,7 +7,8 @@
         <div class="input-row">
           <div class="unit">
             <label for="label">Language Name</label>
-            <input class="form-control" type="text" id="label" placeholder="e.g. English" formControlName="languageName">
+            <input class="form-control" type="text" id="label" placeholder="e.g. English" formControlName="languageName"
+            (keyup)="capitalize('languageName', i)">
           </div>
           <div class="unit">
             <label for="proficiency">Proficiency Level</label>
