added final changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,7 @@
             <app-extra-curricular-activities *ngIf="certificationsSection()"></app-extra-curricular-activities>
             <app-custom-section *ngIf="customSection()"></app-custom-section>
             <app-add-sections></app-add-sections>
-            <button class="btn btn-primary" onclick="window.location.href='https://jami.bio/ffekirnew';"
-            onclick="window.location.href='https://jami.bio/ananya';"  >
+            <button class="btn btn-primary" onclick="window.open('https://linktr.ee/ananya_code', '_blank');" >
                Tip The Engineers</button>
         </div>
     </div> 
