--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,10 @@
             <app-extra-curricular-activities *ngIf="certificationsSection()"></app-extra-curricular-activities>
             <app-custom-section *ngIf="customSection()"></app-custom-section>
             <app-add-sections></app-add-sections>
+            <!--
             <button class="btn btn-primary" onclick="window.open('https://linktr.ee/ananya_code', '_blank');" >
                Tip The Engineers</button>
-        </div>
+        </div>-->
     </div> 
     
     <div class="right-segment p-0">
