--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,8 @@
             <app-add-sections></app-add-sections>
             <!--
             <button class="btn btn-primary" onclick="window.open('https://linktr.ee/ananya_code', '_blank');" >
-               Tip The Engineers</button>
-        </div>-->
+               Tip The Engineers</button>-->
+        </div>
     </div> 
     
     <div class="right-segment p-0">
