--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
 <div class="main-container">
     <div class="left-segment">
         <div class="main-form">
+
             <app-progress-bar></app-progress-bar>
             <app-personaldetails></app-personaldetails>
             <app-personal-summary></app-personal-summary>
             <app-experience></app-experience>
             <app-education></app-education>
             <app-skills></app-skills>
+            
             <app-hobbies *ngIf="hobbiesSection()"></app-hobbies>
             <app-languages *ngIf="languagesSection()"></app-languages>
             <app-internships *ngIf="internshipsSection()"></app-internships>
@@ -15,9 +17,9 @@
             <app-extra-curricular-activities *ngIf="certificationsSection()"></app-extra-curricular-activities>
             <app-custom-section *ngIf="customSection()"></app-custom-section>
             <app-add-sections></app-add-sections>
-            <!--
+
             <button class="btn btn-primary" onclick="window.open('https://linktr.ee/ananya_code', '_blank');" >
-               Tip The Engineers</button>-->
+               Tip The Engineers</button>
         </div>
     </div> 
     
